# sweval

./: .gitignore  LICENSE  README.md  docker_compose.yaml
backend/: Dockerfile  pyproject.toml  run.py  user_preference_examples.json
backend/agent/: assess.py  content_gen.py  metric.py  optimized_assess_content.json  user_preferences.py
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/routes/: generation.py  group.py
backend/app/core/: config.py  dspy_config.py  error_handlers.py
backend/app/db/: database.py
backend/app/models/: models.py
backend/app/optimize/: optimized_assess_content.json  optimized_generate_content.json  optimized_user_preferences.json  optimized_user_preferences_two.json
backend/app/schemas/: api.py  content.py
backend/app/services/: assess.py  content_gen.py  example_service.py  generation_service.py  group_service.py  metric.py  user_preferences.py
backend/examples/: assess_examples.json  content_gen_examples.json
frontend/: Dockerfile
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: TestComponent.tsx
frontend/lib/api/: client.ts  generate.ts
frontend/lib/types/: api.ts
